Fixed menu responsive and corrected middle alignment in stats section

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -34,7 +34,8 @@
   }
 }
 
-@media screen and (max-width: 902px){
+
+@media screen and (max-width: 1198px){
   .section-menu{
     /* display */
     flex-direction: column;
