--- a/scss/partials/_stats.scss
+++ b/scss/partials/_stats.scss
@@ -34,8 +34,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    span{
+    .stats-inner-number{
       font-size: 72px;
+    }
+    .stats-inner-info{
+      font-size: 24px;
     }
   }
 }
